# tcc

./: .gitignore  .pre-commit-config.yaml  README.md  Untitled-1.py  anotacoes.md  pyproject.toml  requirements.txt
docs/: ANOTACOES TCC 1 - ARTHUR PELLENZ WINCK.md
frontend/: package.json  setup.py
frontend/src/: App.tsx
scripts/: start.py
tcc/: model.py  utils.py
tcc/api/: app.py  dynamic_function_creator.py  endpoint_generator.py  model.py  open_api_json_modifier.py  open_api_loader.py
tcc/frontend/: app.py
tcc/resources/json/: api_item_list.json  cached_api_item_list.json  links-stable.json  links.json  open_api.json  openapi_schema.json  selenium-stable.json
tcc/scraper/: apis.json
tcc/scraper/html/: catalogo.html
tcc/scraper/json/: links-stable.json  links.json  selenium.json
tcc/scraper/scraper/: app.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
tcc/scraper/scraper/spiders/: api_selenium_spider.py  conecta_api_spider.py
tests/: api_request_integration_tests.py  dynamic_function_test.py  testing_fastapi_client.py
