[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["arthurwinck <apwinck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
graphene = ">=3.0"
scrapy = "^2.11.2"
isort = "^5.13.2"
twine = "^5.1.1"
build = "^1.2.2.post1"

[tool.poetry.scripts]
api = "scripts.start:api"
scraper = "scripts.start:scraper"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = false

[tool.black]
line-length = 88
target-version = ['py38']